<resources>
    <string name="app_name">Bottom Navigation</string>
    <string name="bottom_nav">Bottom Navigate</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="padc_myanmar">PADC Myanmar</string>
    <string name="hello_world">Hello World!</string>
    <string name="bot_sheet">Bottom Sheet</string>
    <string name="normal_material_button">Normal Material Button</string>
    <string name="text_material_button">text material button</string>
    <string name="outline_material_button">outline material button</string>
    <string name="normal_chip">Normal Chip</string>
    <string name="icon_chip">icon Chip</string>
    <string name="checkable_chip">Checkable Chip</string>
    <string name="choice_chip">Choice Chip</string>
    <string name="filter_chip">Filter Chip</string>
    <string name="entry_chip">Entry Chip</string>
    <string name="action_chip">Action Chip</string>
    <string name="lbl_this">This</string>
    <string name="lbl_is">is</string>
    <string name="padc">PADC</string>
    <string name="myanmar">Myanmar</string>
    <string name="foundation">Foundation</string>
    <string name="learning">Learning</string>
    <string name="portal">Portal</string>
    <string name="enter_keywords">Enter Keywords</string>
    <string name="material_card_view">Material Card View</string>
    <string name="lbl_collapse">Collapsing Tool Bar</string>
    <string name="set_fire_to_the_rain_lyrics">[Verse 1] I let it fall, my heart And as it fell, you rose to claim it It was dark, and I was over Until you kissed my lips and you saved me My hands, they were strong But my knees were far too weak To stand in your arms Without falling to your feet [Pre-Chorus] But there\'s a side to you That I never knew, never knew All the things you\'d say They were never true, never true And the games you\'d play You would always win, always win [Chorus] But I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name [Verse 2] When I lay with you I could stay there, close my eyes Feel you here forever You and me together, nothing is better [Pre-Chorus] \'Cause there\'s a side to you That I never knew, never knew All the things you\'d say They were never true, never true And the games you\'d play You would always win, always win You might also like GOD DID DJ Khaled Pink Venom BLACKPINK USE THIS GOSPEL DJ Khaled [Chorus] But I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name I set fire to the rain And I threw us into the flames When it fell, somethin\' died \'Cause I knew that that was the last time The last time [Bridge] Sometimes, I wake up by the door That heart you caught must be waitin\' for you Even now, when we\'re already over I can\'t help myself from lookin\' for you [Chorus] I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name I set fire to the rain And I threw us into the flames When it fell, somethin\' died \'Cause I knew that that was the last time The last time [Outro] Oh Oh, no Let it burn Oh Let it burn Let it burn [Verse 1] I let it fall, my heart And as it fell, you rose to claim it It was dark, and I was over Until you kissed my lips and you saved me My hands, they were strong But my knees were far too weak To stand in your arms Without falling to your feet [Pre-Chorus] But there\'s a side to you That I never knew, never knew All the things you\'d say They were never true, never true And the games you\'d play You would always win, always win [Chorus] But I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name [Verse 2] When I lay with you I could stay there, close my eyes Feel you here forever You and me together, nothing is better [Pre-Chorus] \'Cause there\'s a side to you That I never knew, never knew All the things you\'d say They were never true, never true And the games you\'d play You would always win, always win You might also like GOD DID DJ Khaled Pink Venom BLACKPINK USE THIS GOSPEL DJ Khaled [Chorus] But I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name I set fire to the rain And I threw us into the flames When it fell, somethin\' died \'Cause I knew that that was the last time The last time [Bridge] Sometimes, I wake up by the door That heart you caught must be waitin\' for you Even now, when we\'re already over I can\'t help myself from lookin\' for you [Chorus] I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name I set fire to the rain And I threw us into the flames When it fell, somethin\' died \'Cause I knew that that was the last time The last time [Outro] Oh Oh, no Let it burn Oh Let it burn Let it burn [Verse 1] I let it fall, my heart And as it fell, you rose to claim it It was dark, and I was over Until you kissed my lips and you saved me My hands, they were strong But my knees were far too weak To stand in your arms Without falling to your feet [Pre-Chorus] But there\'s a side to you That I never knew, never knew All the things you\'d say They were never true, never true And the games you\'d play You would always win, always win [Chorus] But I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name [Verse 2] When I lay with you I could stay there, close my eyes Feel you here forever You and me together, nothing is better [Pre-Chorus] \'Cause there\'s a side to you That I never knew, never knew All the things you\'d say They were never true, never true And the games you\'d play You would always win, always win You might also like GOD DID DJ Khaled Pink Venom BLACKPINK USE THIS GOSPEL DJ Khaled [Chorus] But I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name I set fire to the rain And I threw us into the flames When it fell, somethin\' died \'Cause I knew that that was the last time The last time [Bridge] Sometimes, I wake up by the door That heart you caught must be waitin\' for you Even now, when we\'re already over I can\'t help myself from lookin\' for you [Chorus] I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name I set fire to the rain And I threw us into the flames When it fell, somethin\' died \'Cause I knew that that was the last time The last time [Outro] Oh Oh, no Let it burn Oh Let it burn Let it burn [Verse 1] I let it fall, my heart And as it fell, you rose to claim it It was dark, and I was over Until you kissed my lips and you saved me My hands, they were strong But my knees were far too weak To stand in your arms Without falling to your feet [Pre-Chorus] But there\'s a side to you That I never knew, never knew All the things you\'d say They were never true, never true And the games you\'d play You would always win, always win [Chorus] But I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name [Verse 2] When I lay with you I could stay there, close my eyes Feel you here forever You and me together, nothing is better [Pre-Chorus] \'Cause there\'s a side to you That I never knew, never knew All the things you\'d say They were never true, never true And the games you\'d play You would always win, always win You might also like GOD DID DJ Khaled Pink Venom BLACKPINK USE THIS GOSPEL DJ Khaled [Chorus] But I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name I set fire to the rain And I threw us into the flames When it fell, somethin\' died \'Cause I knew that that was the last time The last time [Bridge] Sometimes, I wake up by the door That heart you caught must be waitin\' for you Even now, when we\'re already over I can\'t help myself from lookin\' for you [Chorus] I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name I set fire to the rain And I threw us into the flames When it fell, somethin\' died \'Cause I knew that that was the last time The last time [Outro] Oh Oh, no Let it burn Oh Let it burn Let it burn [Verse 1] I let it fall, my heart And as it fell, you rose to claim it It was dark, and I was over Until you kissed my lips and you saved me My hands, they were strong But my knees were far too weak To stand in your arms Without falling to your feet [Pre-Chorus] But there\'s a side to you That I never knew, never knew All the things you\'d say They were never true, never true And the games you\'d play You would always win, always win [Chorus] But I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name [Verse 2] When I lay with you I could stay there, close my eyes Feel you here forever You and me together, nothing is better [Pre-Chorus] \'Cause there\'s a side to you That I never knew, never knew All the things you\'d say They were never true, never true And the games you\'d play You would always win, always win You might also like GOD DID DJ Khaled Pink Venom BLACKPINK USE THIS GOSPEL DJ Khaled [Chorus] But I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name I set fire to the rain And I threw us into the flames When it fell, somethin\' died \'Cause I knew that that was the last time The last time [Bridge] Sometimes, I wake up by the door That heart you caught must be waitin\' for you Even now, when we\'re already over I can\'t help myself from lookin\' for you [Chorus] I set fire to the rain Watched it pour as I touched your face Well, it burned while I cried \'Cause I heard it screamin\' out your name Your name I set fire to the rain And I threw us into the flames When it fell, somethin\' died \'Cause I knew that that was the last time The last time [Outro] Oh Oh, no Let it burn Oh Let it burn Let it burn </string>
    <string name="lbl_coordinator">Coordinator</string>
    <string name="lbl_import">Import</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="lbl_slideshow">Slideshow</string>
    <string name="lbl_tools">Tools</string>
    <string name="lbl_communicate">Communicate</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_send">Send</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="stop_refreshing">Stop Refreshing</string>
    <string name="button">Button</string>
    <string name="button_2">button 2</string>
    <string name="app_bar_bottom">App Bar Bottom</string>
    <string name="bottom_nav_with_viewpager">Bottom Nav with Viewpager</string>
    <string name="lbl_bot_sheet">Bottom Sheet</string>
    <string name="collapsing_toolbar">Collapsing Toolbar</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="coordinator_layout">Coordinator Layout</string>
    <string name="navigation_view">Navigation View</string>
    <string name="other_common_ui_element">Other Common UI Element</string>
</resources>